# control

./: meson.build
example/: meson.build  square.cpp
include/control/: control-differential.hpp  control-gain.hpp  control-integral.hpp  control-process.hpp  control-proportional.hpp  control-time.hpp  control-value.hpp  control.hpp
tests/: meson.build  test-differential.cpp  test-gain.cpp  test-integral.cpp  test-proportional.cpp
